--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 agp = "8.4.1"
-kotlin = "1.9.23"
+kotlin = "1.9.24"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
@@ -18,7 +18,7 @@ koinKspVersion = "1.3.1"
 ktorVersion = "2.2.2"
 roomVersion = "2.6.1"
 desugaring = "2.0.4"
-ksp = "1.9.23-1.0.19"
+ksp = "1.9.24-1.0.20"
 timber = "5.0.1"
 splashscreen = "1.0.1"
 legacySupportV4 = "1.0.0"
@@ -28,6 +28,7 @@ fragmentKtx = "1.8.0"
 junitKtx = "1.1.5"
 media3TestUtils = "1.3.1"
 foundationAndroid = "1.6.8"
+yandexLoginSDK = "3.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -98,7 +99,7 @@ androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifec
 androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragmentKtx" }
 
 androidx-media3-test-utils = { group = "androidx.media3", name = "media3-test-utils", version.ref = "media3TestUtils" }
-
+yandex-auth-sdk = { group = "com.yandex.android", name = "authsdk", version.ref = "yandexLoginSDK" }
 
 [bundles]
 koin = [
